# xinput-pointermanager

./: CMakeLists.txt
bld/: debian-version.cmake  gengetopt.cmake  help2man.cmake
debian/: changelog  control  copyright  rules  xinput-pointermanager.install
src/: PointerManager.cpp  PointerManager.h  xinput-pointermanager.cpp  xinput-pointermanager.ggo
